Fix extra space displaying below image avatar

--- a/packages/terra-avatar/src/Avatar.scss
+++ b/packages/terra-avatar/src/Avatar.scss
@@ -13,6 +13,7 @@
     justify-content: center;
     line-height: 0;
     overflow: hidden;
+    vertical-align: middle; // Fixes gap below image variant
     width: var(--terra-avatar-size, 3.429rem);
   }
 
@@ -46,5 +47,9 @@
 
   .avatar-text-small {
     font-size: var(--terra-avatar-font-size-small, 1.143rem);
+  }
+
+  .extra-white-space-fix {
+    font-size: 0;
   }
 }
